[gd_scene load_steps=27 format=3 uid="uid://btres5r46w8pd"]

[ext_resource type="Script" uid="uid://cx0dubayoiydg" path="res://scenes/player/player.gd" id="1_8afob"]
[ext_resource type="Script" uid="uid://bshjfjpv4fojd" path="res://globals/components/state_machine/state_machine.gd" id="2_dovo2"]
[ext_resource type="Script" uid="uid://b2avl7a8t843j" path="res://scenes/player/state/walk.gd" id="3_gmlin"]
[ext_resource type="Script" uid="uid://e2fuxfjfbi6v" path="res://scenes/player/state/jumping.gd" id="4_lvxji"]
[ext_resource type="Script" uid="uid://w7kclhp5i617" path="res://scenes/player/state/falling.gd" id="5_p47bc"]
[ext_resource type="Script" uid="uid://c0ia5fjdsy8gi" path="res://scenes/player/state/wallride.gd" id="6_75vfm"]
[ext_resource type="Script" uid="uid://de3qt6f12rm0d" path="res://scenes/player/state/crouching.gd" id="7_5gtgg"]
[ext_resource type="Script" uid="uid://b8emx6hnleqgi" path="res://scenes/player/camera.gd" id="8_fm80t"]
[ext_resource type="Script" uid="uid://0d0g04ernni7" path="res://scenes/player/state/dying.gd" id="8_gx1jg"]
[ext_resource type="PackedScene" uid="uid://c5wrnb4pgq0i0" path="res://assets/models/player/arm/arm.gltf" id="8_qek5x"]
[ext_resource type="Script" uid="uid://vtsno6ihqmcm" path="res://scenes/player/state/won.gd" id="9_ugbui"]
[ext_resource type="PackedScene" uid="uid://n1a3cmwjxmib" path="res://scenes/player/ui/ammo_count.tscn" id="10_h17s1"]
[ext_resource type="PackedScene" uid="uid://cugvx1d40wwv1" path="res://scenes/player/ui/time/time.tscn" id="12_fm80t"]
[ext_resource type="Texture2D" uid="uid://6ya0kpv6f4fk" path="res://assets/textures/hud/boost_ring.svg" id="12_myrg7"]
[ext_resource type="Script" uid="uid://cjtgimnfqhxq6" path="res://scenes/player/pickupper.gd" id="13_gx1jg"]
[ext_resource type="ArrayMesh" uid="uid://6b1musmygn87" path="res://assets/models/particles/glass_shard.mesh" id="15_fcs02"]

[sub_resource type="BoxShape3D" id="BoxShape3D_x7p2l"]
size = Vector3(0.7, 1.8, 0.7)

[sub_resource type="Curve" id="Curve_75vfm"]
_limits = [0.0, 1.0, 0.0, 2.5]
bake_resolution = 30
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(2.5, 0), -0.7, 0.0, 0, 0]
point_count = 2

[sub_resource type="FastNoiseLite" id="FastNoiseLite_fm80t"]
frequency = 1.0
fractal_gain = 3.0

[sub_resource type="Animation" id="Animation_je7p5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.001),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.5, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Collider:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.7, 1.8, 0.7)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Collider:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.9, 0)]
}

[sub_resource type="Animation" id="Animation_h17s1"]
resource_name = "crouch_down"
length = 0.3
step = 0.0334
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 2),
"points": PackedFloat32Array(1.5, -0.25, 0, 0.1, -0.0124288, 0.6, -0.0166667, 0.14731, 0.0151467, -0.133876, 0.48, -0.0335427, 0.0245112, 0.0333333, -0.0243582, 0.6, -0.0166667, 0.0254945, 0.0311973, -0.0477216),
"times": PackedFloat32Array(0, 0.133333, 0.216667, 0.3)
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Collider:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.7, 1.8, 0.7), Vector3(0.7, 0.8, 0.7)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Collider:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.9, 0), Vector3(0, 0.4, 0)]
}

[sub_resource type="Animation" id="Animation_fm80t"]
resource_name = "crouch_up"
length = 0.3
step = 0.0334
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0.6, -0.0166667, 0.0254945, 0.0311973, -0.0477216, 0.456569, -0.0335427, 0.0245112, 0.0333333, -0.0243582, 1.53, -0.0333333, -0.531342, 0.0333333, 0.154883, 1.5, -0.0333333, 0.00977099, 0.1, -0.0124288),
"times": PackedFloat32Array(0, 0.0666667, 0.166667, 0.3)
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Collider:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0666667, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.7, 0.8, 0.7), Vector3(0.7, 1.8, 0.7)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Collider:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0666667, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.4, 0), Vector3(0, 0.9, 0)]
}

[sub_resource type="Animation" id="Animation_gx1jg"]
resource_name = "Dying"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1.55567, -0.133333, -0.347331, 0.000509501, -0.0875893, 1.3894, -0.0270064, -0.00177084, 0.0666667, 0.0043714, 1.556, 0, -0.0611991, 0.00367767, -0.0699418, 1.46808, -0.0270064, -0.00177084, 0.0461641, 0.00874269, 1.556, 0, -0.0611991, 0.00367767, -0.0699418),
"times": PackedFloat32Array(0, 0.7, 0.8, 0.866667, 0.933333, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gx1jg"]
_data = {
&"RESET": SubResource("Animation_je7p5"),
&"crouch_down": SubResource("Animation_h17s1"),
&"crouch_up": SubResource("Animation_fm80t"),
&"dying": SubResource("Animation_gx1jg")
}

[sub_resource type="CylinderShape3D" id="CylinderShape3D_fm80t"]
height = 1.8

[sub_resource type="Curve" id="Curve_myrg7"]
_limits = [-360.0, 360.0, 0.0, 1.0]
bake_resolution = 20
_data = [Vector2(0, 1), 0.0, 19.0, 0, 1, Vector2(1, 20), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Player" type="CharacterBody3D"]
collision_layer = 4
floor_stop_on_slope = false
floor_constant_speed = true
floor_snap_length = 0.2
script = ExtResource("1_8afob")
forward_speed = 20.0
boost_regen = 0.4

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("BoxShape3D_x7p2l")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("default_state")]
script = ExtResource("2_dovo2")
default_state = NodePath("Walk")
metadata/_custom_type_script = "uid://bshjfjpv4fojd"

[node name="Walk" type="Node" parent="StateMachine" node_paths=PackedStringArray("state_jump", "state_crouch")]
unique_name_in_owner = true
script = ExtResource("3_gmlin")
state_jump = NodePath("../Jumping")
state_crouch = NodePath("../Crouching")
metadata/_custom_type_script = "uid://c4wduh2exufqe"

[node name="Jumping" type="Node" parent="StateMachine" node_paths=PackedStringArray("state_walk", "state_wallride", "state_fall")]
unique_name_in_owner = true
script = ExtResource("4_lvxji")
damping_delta_mod = 0.9
state_walk = NodePath("../Walk")
state_wallride = NodePath("../Wallride")
state_fall = NodePath("../Falling")
metadata/_custom_type_script = "uid://c4wduh2exufqe"

[node name="Falling" type="Node" parent="StateMachine" node_paths=PackedStringArray("state_walk", "state_jump", "state_wallride")]
unique_name_in_owner = true
script = ExtResource("5_p47bc")
state_walk = NodePath("../Walk")
state_jump = NodePath("../Jumping")
state_wallride = NodePath("../Wallride")
metadata/_custom_type_script = "uid://c4wduh2exufqe"

[node name="Wallride" type="Node" parent="StateMachine" node_paths=PackedStringArray("state_jump")]
unique_name_in_owner = true
script = ExtResource("6_75vfm")
mod_decay_curve = SubResource("Curve_75vfm")
state_jump = NodePath("../Jumping")
metadata/_custom_type_script = "uid://c4wduh2exufqe"

[node name="Crouching" type="Node" parent="StateMachine" node_paths=PackedStringArray("state_jump", "state_walk")]
unique_name_in_owner = true
script = ExtResource("7_5gtgg")
slope_forward_boost = 150.0
strafe_damping_mod = 2.0
state_jump = NodePath("../Jumping")
state_walk = NodePath("../Walk")
metadata/_custom_type_script = "uid://c4wduh2exufqe"

[node name="Dying" type="Node" parent="StateMachine"]
unique_name_in_owner = true
script = ExtResource("8_gx1jg")
metadata/_custom_type_script = "uid://c4wduh2exufqe"

[node name="Won" type="Node" parent="StateMachine"]
unique_name_in_owner = true
script = ExtResource("9_ugbui")
metadata/_custom_type_script = "uid://c4wduh2exufqe"

[node name="Head" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0206336)
script = ExtResource("8_fm80t")
shake_noise = SubResource("FastNoiseLite_fm80t")
shake_trauma_decay = 0.0
shake_rotation_max = Vector3(0.059, 0.059, 0)

[node name="GunCast" type="RayCast3D" parent="Head/Camera3D"]
unique_name_in_owner = true
enabled = false
target_position = Vector3(0, 0, -300)
collision_mask = 3

[node name="Arm" parent="Head/Camera3D" instance=ExtResource("8_qek5x")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.28368, -0.255538, -0.137871)
visible = false

[node name="Skeleton3D" parent="Head/Camera3D/Arm/ArmRig" index="0"]
transform = Transform3D(0.998153, -0.0259395, -0.0549393, 0.0287191, 0.998315, 0.0504255, 0.0535387, -0.0519101, 0.997216, 0, 0, 0)

[node name="PalmAttachment" type="BoneAttachment3D" parent="Head/Camera3D/Arm/ArmRig/Skeleton3D" index="1"]
transform = Transform3D(-0.433253, -0.166442, -0.88577, 0.858569, 0.222715, -0.461798, 0.274137, -0.96057, 0.0464103, 0.00955234, 0.0605417, -0.468094)
bone_name = "hand.R"
bone_idx = 2

[node name="GunAttachPoint" type="Marker3D" parent="Head/Camera3D/Arm/ArmRig/Skeleton3D/PalmAttachment"]
unique_name_in_owner = true
transform = Transform3D(-0.27296, 0.918934, 0.284699, -0.223958, 0.227107, -0.947768, -0.935594, -0.322464, 0.143812, 0.016, 0.162, -0.011)

[node name="AnimationPlayer" parent="Head/Camera3D/Arm" index="1"]
autoplay = "WeildPistol"

[node name="Hud" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="Reticle" type="ColorRect" parent="Hud"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -1.0
offset_right = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Boost" type="TextureProgressBar" parent="Hud/Reticle"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -60.0
offset_top = -60.0
offset_right = 61.0
offset_bottom = 61.0
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(60, 60)
max_value = 1.0
step = 0.001
value = 1.0
fill_mode = 5
radial_initial_angle = 180.0
radial_fill_degrees = 180.0
texture_progress = ExtResource("12_myrg7")

[node name="AmmoCount" parent="Hud" instance=ExtResource("10_h17s1")]
unique_name_in_owner = true

[node name="Time" parent="Hud" instance=ExtResource("12_fm80t")]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -185.0
offset_right = 0.0
grow_horizontal = 0

[node name="Speed" type="Control" parent="Hud"]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -186.0
offset_top = -103.0
grow_horizontal = 0
grow_vertical = 0

[node name="SpeedCount" type="Label" parent="Hud/Speed"]
unique_name_in_owner = true
layout_mode = 1
offset_right = 110.0
offset_bottom = 88.0
rotation = 0.0698132
theme_type_variation = &"PlayerLabel"
theme_override_font_sizes/font_size = 64
text = "99"
horizontal_alignment = 2

[node name="Unit" type="Label" parent="Hud/Speed/SpeedCount"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_top = 39.0
offset_right = 51.0
offset_bottom = 78.0
grow_horizontal = 0
rotation = -0.0698132
theme_type_variation = &"PlayerLabel"
text = "m/s"

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="Control" type="Control" parent="GameOver"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="GameOver/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.3)

[node name="Menu" type="Control" parent="GameOver/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -202.5
offset_top = -219.5
offset_right = 202.5
offset_bottom = 219.5
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="GameOver/Control/Menu"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 88.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "GAME OVER"
horizontal_alignment = 1

[node name="YourTime" type="Label" parent="GameOver/Control/Menu/GameOverLabel"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 81.0
offset_bottom = 120.0
grow_horizontal = 2
text = "YOUR TIME:"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver/Control/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 83.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Restart" type="Button" parent="GameOver/Control/Menu/VBoxContainer"]
layout_mode = 2
text = "RESTART"

[node name="Quit" type="Button" parent="GameOver/Control/Menu/VBoxContainer"]
layout_mode = 2
text = "QUIT TO MENU"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_gx1jg")
}

[node name="Pickupper" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 8
monitorable = false
script = ExtResource("13_gx1jg")

[node name="Collider" type="CollisionShape3D" parent="Pickupper"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CylinderShape3D_fm80t")
debug_color = Color(0.164706, 0.643137, 0, 0.0941176)

[node name="UncrouchChecks" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="RayCast3D" type="RayCast3D" parent="UncrouchChecks"]
enabled = false
target_position = Vector3(0, 1.8, 0)

[node name="RayCast3D2" type="RayCast3D" parent="UncrouchChecks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.350331)
enabled = false
target_position = Vector3(0, 1.8, 0)

[node name="RayCast3D3" type="RayCast3D" parent="UncrouchChecks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.35)
enabled = false
target_position = Vector3(0, 1.8, 0)

[node name="RayCast3D4" type="RayCast3D" parent="UncrouchChecks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.35, 0, 0)
enabled = false
target_position = Vector3(0, 1.8, 0)

[node name="RayCast3D5" type="RayCast3D" parent="UncrouchChecks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.35, 0, 0)
enabled = false
target_position = Vector3(0, 1.8, 0)

[node name="GlassParticles" type="CPUParticles3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
emitting = false
amount = 12
one_shot = true
explosiveness = 1.0
mesh = ExtResource("15_fcs02")
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 0.0
emission_ring_radius = 1.0
emission_ring_inner_radius = 0.9
emission_ring_cone_angle = 90.0
particle_flag_rotate_y = true
direction = Vector3(0, 0, -1)
spread = 10.0
initial_velocity_min = 26.0
initial_velocity_max = 28.0
angle_min = -30.0
angle_max = 30.0
angle_curve = SubResource("Curve_myrg7")
scale_amount_min = 0.8
scale_amount_max = 2.0

[connection signal="pressed" from="GameOver/Control/Menu/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="GameOver/Control/Menu/VBoxContainer/Quit" to="." method="_on_quit_pressed"]

[editable path="Head/Camera3D/Arm"]
